chore: 운영 환경 보안 및 초기화 설정 정리